Fix: Add a space after hyphen of a parameter of an element.

--- a/src/scss/_elements.scss
+++ b/src/scss/_elements.scss
@@ -25,6 +25,7 @@ section.elements {
           & > div.element-param-desc:before {
             content: '-';
             margin-left: 0.3rem;
+            margin-right: 0.3rem;
           }
 
           & > div.element-param-desc {
