--- a/src/scss/xsldoc.scss
+++ b/src/scss/xsldoc.scss
@@ -3,9 +3,9 @@
 @import "config";
 @import "main";
 @import "header-footer";
-@import "namespaces";
 @import "importings";
 @import "includings";
+@import "namespaces";
 @import "parameters";
-@import "elements";
-@import "functions";
+@import "match-templates";
+@import "named-templates";
