--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,10 +1,12 @@
+@use "./config";
+
 html {
-  font-size: $font-size;
+  font-size: config.$font-size;
 }
 
 body {
-  font-family: $font-family;
-  color: $font-color;
+  font-family: config.$font-family;
+  color: config.$font-color;
   padding: 0.5rem;
   margin: 0rem;
 }
@@ -16,7 +18,7 @@ main {
   & > div.page-description {
 
     & > div.design-comment-line:first-of-type {
-      color: $page-title-color;
+      color: config.$page-title-color;
       font-size: 2rem;
       font-weight: bold;
       margin-left: 0.7rem;
@@ -32,7 +34,7 @@ main {
 
     & > h2 {
       font-size: 1.4rem;
-      background-color: $section-title-bgcolor;
+      background-color: config.$section-title-bgcolor;
       padding: 0.2rem 0.5rem;
     }
 
